# zendo

./: .dockerignore  .gitattributes  .gitignore  .gitkeep  Dockerfile  README.md  fly.toml  pyrightconfig.json  start-all.sh  tree.txt
.github/workflows/: build-wheel.yml
.zed/: settings.json
backend/models/openclip/: .gitattributes  ViT-B-32-scripted.pt  script_clip.py
backend/python/: pyproject.toml  requirements.txt
backend/python/app/: main.py
backend/python/app/config/: settings.py
backend/python/app/routes/: example.py  image.py  images.py  metadata.py  predict.py  upload.py
backend/python/app/services/: clip_model.py  db.py  file_handler.py  metadata_handler.py
backend/python/app/tests/: test_metadata_handler.py
backend/python/app/uploads/: metadata.json  zendoai.db
backend/rust/: Cargo.toml
backend/rust/python/zendoai/zendolib/: __init__.pyi
backend/rust/src/: infer.rs  lib.rs  main.rs
backend/rust/src/python/: mod.rs  python.rs
benchmarks/: benchmark_clip_inference.py  benchmark_transform.py
frontend/: .prettierrc  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx  proxy-server.js
frontend/app/__api-disabled/images/: route.ts
frontend/app/__api-disabled/metadata/: route.ts
frontend/app/__api-disabled/predict/: route.ts
frontend/app/api/upload/: route.ts
frontend/components/: ImageEditor.tsx  ImageGallery.tsx  ImageUploadForm.tsx  LeftSideBar.tsx  Logo.tsx  PredictionDisplay.tsx  Ribbon.tsx  StoreProvider.tsx
frontend/lib/: store.ts
frontend/lib/features/image-editor/: imageEditorSlice.ts
