[package]
name = "zendoai"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "zendolib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zendo_backend"
path = "src/main.rs"

[[bin]]
name = "dev"
path = "src/bin/dev.rs"

[dependencies]
anyhow = "1.0.98"
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["python"]
python = ["pyo3"]

[dependencies.pyo3]
version = "0.24.2"
optional = true
features = ["extension-module", "auto-initialize", "macros"]


[package.metadata.maturin]
python-source = "python"
include = ["python/**/*.py", "python/**/*.pyi"]
